Arreglando getPcr para laboratorio y cambiando yaml y controller
